<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Guitar Backing Track Generator</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Guitar Backing Track Generator</string>
    <string name="Generate">Generate</string>
    <string name="FavouritesRecordings">Favourites/Recordings</string>
    <string name="Favourites">Favourites</string>
    <string name="Help">Help</string>
    <string name="Credits">Credits</string>
    <string name="Exit">Exit</string>
    <string name="Stop">Stop</string>
    <string name="Start">Start</string>
    <string name="Key">Key</string>
    <string name="Play">Play</string>
    <string name="Speed">Speed</string>
    <string name="Prev">Prev</string>
    <string name="Next">Next</string>
    <string name="Style">Style</string>
    <string name="Calm">Calm</string>
    <string name="Heavy">Heavy</string>
    <string name="Mode">Mode</string>
    <string name="Major">Major</string>
    <string name="Minor">Minor</string>
    <string name="Pause">Pause</string>
    <string name="Random">Random</string>
    <string name="Clear">Clear</string>
    <string name="DefaultKey">A</string>
    <string name="AddToFavourites">Add To Favourites</string>
    <string name="AddToRecordings">Add To Recordings</string>
    <string name="DeleteTrack">Delete Track</string>
    <string name="DeleteAllTracks">Delete All Tracks</string>
    <string name="SwitchTo">Switch To</string>
    <string name="SortBy">Sort By</string>
    <string name="MusicPlayer">Music Player</string>
    <string name="VideoPlayer">Video Player</string>
    <string name="Share">Share</string>
    <string name="PlayRecording">Plays the recording when pressed/Pauses it if pressed again</string>
    <string name="ForwardRecording">Forwards the recording when pressed</string>
    <string name="BackwardRecording">Backwards the recording when pressed</string>

</resources>