<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonMaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonMin"
        android:layout_alignBottom="@+id/buttonMin"
        android:layout_toLeftOf="@+id/textStyle"
        android:text="@string/Major" />

    <TextView
        android:id="@+id/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonHeavy"
        android:layout_centerHorizontal="true"
        android:text="@string/Style"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonCalm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonMaj"
        android:layout_below="@+id/buttonMaj"
        android:layout_marginTop="36dp"
        android:text="@string/Calm" />

    <Button
        android:id="@+id/buttonHeavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCalm"
        android:layout_alignBottom="@+id/buttonCalm"
        android:layout_alignLeft="@+id/buttonMin"
        android:text="@string/Heavy" />

    <TextView
        android:id="@+id/textSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonFast"
        android:layout_alignLeft="@+id/textStyle"
        android:text="@string/Speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonExit"
        android:layout_alignBottom="@+id/buttonExit"
        android:layout_toLeftOf="@+id/textMode"
        android:text="@string/Play" />

     <Button
         android:id="@+id/buttonMin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textMode"
         android:layout_toRightOf="@+id/textMode"
         android:text="@string/Minor" />

     <Button
         android:id="@+id/buttonExit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonFast"
         android:layout_marginTop="18dp"
         android:layout_toRightOf="@+id/textMode"
         android:text="@string/Exit" />

     <TextView
         android:id="@+id/textMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textSpeed"
         android:layout_below="@+id/textKey"
         android:layout_marginTop="64dp"
         android:text="@string/Mode"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <Button
         android:id="@+id/buttonSlow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/buttonPlay"
         android:layout_below="@+id/buttonCalm"
         android:layout_marginTop="19dp"
         android:text="@string/Slow" />

     <Button
         android:id="@+id/buttonFast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/buttonSlow"
         android:layout_alignBottom="@+id/buttonSlow"
         android:layout_alignLeft="@+id/buttonHeavy"
         android:text="@string/Fast" />

     <TextView
         android:id="@+id/Key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textKey"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
         android:text="A"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <Button
         android:id="@+id/buttonPrev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/Key"
         android:layout_alignBottom="@+id/Key"
         android:layout_alignRight="@+id/buttonMaj"
         android:text="Prev" />

     <Button
         android:id="@+id/buttonNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/Key"
         android:layout_alignBottom="@+id/Key"
         android:layout_alignLeft="@+id/buttonMin"
         android:text="Next" />

</RelativeLayout>