<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageButton
        android:id="@+id/btnBackward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnForward"
        android:layout_toLeftOf="@+id/btnPlay"
        android:background="@null"
        android:contentDescription="@string/BackwardRecording"
        android:src="@drawable/btn_backward" />

    <ImageButton
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnPlay"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/btnPlay"
        android:background="@null"
        android:contentDescription="@string/ForwardRecording"
        android:src="@drawable/btn_forward" />

    <TextView
        android:id="@+id/songCurrentDurationLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/songProgressBar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_toLeftOf="@+id/btnPlay"
        android:gravity="left"
        android:textColor="#eeeeee"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/songTotalDurationLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/songProgressBar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_toRightOf="@+id/btnPlay"
        android:gravity="right"
        android:textColor="#04cbde"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/songCurrentDurationLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/songTotalDurationLabel"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/Exit" />

    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnForward"
        android:layout_alignLeft="@+id/songCurrentDurationLabel"
        android:layout_marginBottom="16dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seek_handler" />

    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonExit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:background="@null"
        android:contentDescription="@string/PlayRecording"
        android:src="@drawable/btn_play" />

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonExit"
        android:layout_alignLeft="@+id/buttonExit"
        android:layout_alignRight="@+id/buttonExit"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/Share" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/MusicPlayer"/>

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Song Name" />

</RelativeLayout>