<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:screenOrientation="portrait"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/Music_Player"
        android:textSize="20sp" />
        
    <TextView
        android:id="@+id/trackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/Exit" />

    <Button
        android:id="@+id/buttonAddToFavourites"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonExit"
        android:layout_alignLeft="@+id/buttonExit"
        android:background="@drawable/button"
        android:text="@string/AddToFavourites" />

    <Button
        android:id="@+id/buttonStartRec"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPlayRec"
        android:layout_alignBottom="@+id/buttonPlayRec"
        android:layout_toRightOf="@+id/buttonPlayRec"
        android:background="@drawable/button"
        android:text="StartRec" />

    <Button
        android:id="@+id/buttonPlayRec"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAddToFavourites"
        android:layout_alignLeft="@+id/buttonAddToFavourites"
        android:background="@drawable/button"
        android:text="PlayRec" />

    <Button
        android:id="@+id/buttonAddToRecordings"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonExit"
        android:layout_toRightOf="@+id/buttonAddToFavourites"
        android:background="@drawable/button"
        android:text="@string/AddToRecordings" />

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPlayRec"
        android:layout_below="@+id/trackName"
        android:layout_marginTop="15dp" >
    </com.google.android.youtube.player.YouTubePlayerView>

</RelativeLayout>